fix project alignment

--- a/style.css
+++ b/style.css
@@ -301,6 +301,7 @@ h1 {
 #project-container {
   width: 80%;
   margin: 3% auto;
+  display: flex
 }
 
 
@@ -310,6 +311,12 @@ h1 {
   height: 600px;
   width: 69%;
   margin: 0 auto;
+}
+
+#project-description {
+  background-color: pink;
+  width: 100%;
+  height: 20%;
 }
 
 #project-nav {
@@ -502,8 +509,11 @@ h1 {
 }
 
 
-@media only screen and (min-width: 1800px) {
-    /* For mobile phones: */
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) {
     #current-project {
       background-color: green;
       height: 480px;
@@ -511,3 +521,4 @@ h1 {
       margin: 0 auto;
     }
 }
+
